Fixing section spacing

--- a/src/styles/layouts/search-results.scss
+++ b/src/styles/layouts/search-results.scss
@@ -1,5 +1,5 @@
 body.template-search {
-  main#MainContent {
+  .page-basic {
     @extend %maxwidth;
   }
 
