--- a/src/styles/sections/footer.scss
+++ b/src/styles/sections/footer.scss
@@ -9,6 +9,10 @@
   width: 100%;
 }
 
+#shopify-section-footer {
+  width: 100%;
+}
+
 #main-footer {
   // background: $color-drop;
   color: inherit;
