--- a/src/styles/sections/general.scss
+++ b/src/styles/sections/general.scss
@@ -12,7 +12,7 @@ body {
 .shopify-section {
   position: relative;
   z-index: 1;
-  margin: -1px 0 0;
+  margin: -1px auto 0;
 }
 
 .section-bg {
